# shader_toy

./: .gitignore  Cargo.toml  readme.md
app/: Cargo.toml
app/assets/images/cell/: Thumbs.db
app/assets/pdbs/: AF-A0A7K5PA91-F1-model_v4.cif
app/assets/shaders/: custom_material.wgsl  extended_material.wgsl  game_of_life.wgsl  line_material.wgsl
app/src/: lib.rs  light_rig.rs
app/src/material/: custom_material.rs  extended_marerial.rs  game_of_life.rs  mod.rs
app/src/state/: camera.rs
parsers/pdb/: Cargo.toml
plugins/bevy_cameras/: Cargo.toml
plugins/bevy_compute_rasterizer/: Cargo.toml
plugins/bevy_compute_rasterizer/src/: lib.rs  plugin.rs  util.rs
plugins/bevy_compute_rasterizer/src/instance_data/: cpu_instanced.rs  gpu_instanced.rs  mod.rs
plugins/bevy_compute_rasterizer/src/loader/: las_loader.rs  mod.rs  point.rs
plugins/bevy_compute_rasterizer/src/pointcloud_data/: clipping_plane.rs  clipping_plane_gpu.rs  mod.rs  pointcloud.rs
plugins/bevy_compute_rasterizer/src/render/: mod.rs  render_graph.rs  render_pipeline.rs
plugins/bevy_compute_rasterizer/src/render/pipelines/: eye_dome_pipeline.rs  mod.rs  pointcloud_pipeline.rs
plugins/bevy_compute_rasterizer/src/render/shaders/: bindings.wgsl  mod.rs  types.wgsl
plugins/bevy_compute_rasterizer/src/render/shaders/compute/: octree.wgsl
plugins/bevy_compute_rasterizer/src/render/shaders/eye_dome_pipeline/: main.wgsl
plugins/bevy_compute_rasterizer/src/render/shaders/pointcloud_pipeline/: main.wgsl
plugins/bevy_compute_rasterizer/src/render/shaders/render/: instancing.wgsl
plugins/bevy_geometry/: Cargo.toml
plugins/bevy_instanced/: Cargo.toml
plugins/bevy_protein/: Cargo.toml
plugins/bevy_protein/src/: lib.rs  polypeptide_plane.rs  polypeptide_planes.rs  protein_asset_loader.rs
plugins/bevy_protein/src/atom/: mod.rs
plugins/bevy_protein/src/bonds/: mod.rs
plugins/bevy_protein/src/polypeptide/: mod.rs  polypeptide_plane.rs  polypeptide_planes.rs
(+49 files in other folders)
