[workspace]
resolver = "2"
edition = "2021"
members = ["app", "plugins/*"]


[workspace.dependencies]
bevy = { version = "0.13" }
thiserror = "1.0.57"
serde = { version = "1.0.197", features = ["derive"] }
bevy_asset_loader = "0.20.0"
pdbtbx = "0.11.0"
bevy_mod_picking = { git = "https://github.com/StrikeForceZero/bevy_mod_picking", branch = "bevy-0.13" }
