[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true, features = ["jpeg", "file_watcher"] }
bevy_cameras = { path = "../plugins/bevy_cameras" }
bevy_asset_loader = { workspace = true }
bevy_protein = { path = "../plugins/bevy_protein" }
pdbtbx = { workspace = true }
bevy_panorbit_camera = "0.14"
bevy_mod_picking = { workspace = true }
bevy_instanced = { path = "../plugins/bevy_instanced" }
