[package]
name = "bevy_protein"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
pdbtbx = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
bevy_asset_loader = { workspace = true }
bevy_geometry = { path = '../bevy_geometry' }
bevy_mod_picking = { workspace = true }
bevy_instanced = { path = "../bevy_instanced" }


periodic-table-on-an-enum = "0.3.2"
